2005-09-12  Eric Anholt  <anholt@FreeBSD.org>

	* configure.ac:
	Don't define POSIX_SOURCE on any BSDs, since it breaks things.

	* hw/xfree86/int10/Makefile.am:
	Define NO_SYS_HEADERS, as the monolithic build does.  Helps FreeBSD.

	* hw/xfree86/x86emu/Makefile.am:
	Don't include validate.c in the library, since it seems to be a userland
	test program.

2005-09-12  Daniel Stone  <daniel@freedesktop.org>

	* configure.ac:
	Put DMX AC_CONDITIONALS at the top level, since they must always be
	called.  Add missing resourceproto, fontenc, and fontsproto to
	REQUIRED_MODULES.

	* configure.ac:
	* include/xorg-config.h.in:
	* include/xorg-server.h.in:
	Since we build vgahw unconditionally, always define WITH_VGAHW.

2005-09-09  Jürg Billeter  <j@bitron.ch>

	* configure.ac: use RGB_DB not RGB_PATH as that's what it's looking for

	* xkb/Makefile.am: define HAVE_XKB_CONFIG_H so setting xkb-path works

2005-09-02  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	Use macros from xtrans.m4, issue error if not found.

2005-09-02  Daniel Stone  <daniel@freedesktop.org>

	* GL/mesa/X/Makefile.am:
	Add -include dix-config.h to CFLAGS so we pickup _XSERVER64 and other
	assorted vaguely useful macros; this unbreaks GLcore on amd64.

2005-09-01  Daniel Stone  <daniel@freedesktop.org>

	* configure.ac:
	* include/config.h.in:
	Make RGB_PATH configurable.

	* hw/xfree86/i2c/Makefile.am:
	Move I2C modules back to $(moduledir)/multimedia.

2005-08-30  Kristian Høgsberg  <krh@redhat.com>

	* hw/xfree86/dri/Makefile.am: 
	* hw/xfree86/os-support/drm/Makefile.am: Use the $(moduledir)
	makefile variable instead of @moduledir@ so it can be overridden
	at make install time.

	* xorg-server.pc.in: Remove driverdir and inputdir from pkg-config
	file.  The directory layout of moduledir is fixed and well known
	by drivers.

Thu Aug 25 17:15:01 2005  Søren Sandmann  <sandmann@redhat.com>

	* hw/xfree86/i2c/Makefile.am (module_LTLIBRARIES): Add all the